# RIPSoftimage

./: .gitignore
Application/Plugins/: 000_SetPythonPath.py  CMakeLists.txt  SetPythonPath.py
Application/Plugins/Alembic/: SIAlembic.exp  SIAlembic.lib
Application/Plugins/Anim/: MirrorAnim.js  SelApplyAndPasteAction.js  SynopticFunctions.js
Application/Plugins/Barbatruc/: bGeoCacheIO.py  bbppTransformation.py
Application/Plugins/Barbatruc/Barbatruc/: BarbatrucMaya.vcproj  BarbatrucXSI.sln  BarbatrucXSI.vcproj  bbppGeoCache.cpp  bbppGeoCache.h  bbppPointCache.cpp  bbppPointCache.h  mGeoCache.cpp  mGeoCacheRecord.cpp  mPointCache.cpp  mRegister.cpp  mRegister.h  sGeoCache.cpp  sGeoCacheImport.cpp  sGeoCacheRecord.cpp  sPointCache.cpp  sPointCache.h  sPointCacheRecord.cpp  sRegister.cpp  sRegister.h
Application/Plugins/Cloth/: ClothControl.py  ClothIconOp.js  ClothTools.py
Application/Plugins/Flow/: CFData.cpp  CFData.h  CrappyFlow.cpp  CrappyFlow.h  CrappyFlow.sln  CrappyFlow.vcxproj
Application/Plugins/Furax/: FuraxPlugin.py
Application/Plugins/ICEHair/: Hair.sln  Hair.vcxproj  HairBranch.cpp  HairBranch.h  HairControl.py  HairData.cpp  HairData.h  HairGeometry.cpp  HairGeometry.h  HairGeometryChecker.cpp  HairGuide.cpp  HairGuide.h  HairGuideTriangle.cpp  HairMeshData.cpp  HairRegister.cpp  HairRegister.h  HairSkeletonPoints.cpp  HairSkeletonRoot.cpp  HairSolver.cpp  HairStrandFitting.cpp  HairToolsPlugin.py  HairTriangleAreaSum.cpp  HairUpdateMeshData.cpp  ICEHair.sln  UpgradeLog.htm
Application/Plugins/ICERig/: CMakeLists.txt  GNUmakefile  ICERigNodes.sln  ICERigNodes.vcxproj  ICERigTools.cpp  ICERigTools.sln  ICERigTools.vcxproj  IRBrushTool.cpp  IRBuildElementID.cpp  IRCubicBezier.cpp  IRCubicBezier.h  IRCubicBezierGenerator.cpp  IRCubicBezierPoint.cpp  IRDeltaMush.cpp  IRDeltaMush.h  IRDeltaMushHelpFunction.cpp  IRDeltaMushInit.cpp  IRElement.cpp  IRElement.h  IRFabrik.cpp  IRHandle.cpp  IRHandle.h  IRJoint.cpp  IRJoint.h  IRLeastSquareFitLine.cpp  IRLeastSquareFitLine.h  IRLeastSquareFitPlane.cpp  IRLeastSquareFitPlane.h  IRManipulator.cpp  IRMoveHandle.cpp  IRMoveHandle.h  IROGLPrimitives.h  IROffsetHandle.cpp  IROffsetHandle.h  IROpenGL.h  IRRegister.cpp  IRRegister.h  IRResampleCurve.cpp  IRRig.h  IRRotateHandle.cpp  (+23 more)
Application/Plugins/ICERig/Release/: BoneCreateTool.exp  BoneCreateTool.lib
Application/Plugins/MergeCurve/: MergeCurve.sln  MergeCurve.vcxproj  MergeCurveCmd.cpp  MergeCurveMenu.cpp  MergeCurveOp.cpp  Register.cpp
Application/Plugins/PointCache/: CorrectSyflexCache.cpp  GNUmakefile  PointCache.h  PointCache.ilk  PointCache.sln  PointCache.vcxproj  PointCacheLog.cpp  PointCachePPG.cpp  PointCacheReader.cpp  PointCacheRegister.cpp  PointCacheSyflexCache.cpp  PointCacheWriter.cpp
Application/Plugins/STL/: CMakeLists.txt  STL_Export.cpp  STL_File.cpp  STL_File.h  STL_Import.cpp  STL_Reader.cpp  STL_ReaderNode.cpp  STL_Register.cpp  STL_Register.h  STL_XSI_IO.sln  STL_XSI_IO.vcproj
Application/Plugins/Shared/: commands.cpp  commands.h  constants.h  functions.cpp  functions.h  map.h  memory.h  opengl.cpp  opengl.h  string.cpp  string.h  xsi.h  xsi_3d.h  xsi_common.h
Application/Plugins/SynthNode/: CMakeLists.txt  Drone.cpp  GNUmakefile  SynthoxData.cpp  SynthoxData.h  SynthoxInstrument.cpp  SynthoxInstrument.h  SynthoxInstruments.cpp  SynthoxInstruments.h  SynthoxPlayer.cpp  SynthoxReader.cpp  SynthoxRegister.cpp  SynthoxRegister.h  SynthoxVoicer.cpp  SynthoxVoicer.h  UpgradeLog.XML  UpgradeLog.htm  UpgradeLog2.XML  UpgradeLog3.XML  VoicDrum.cpp  WvOut.h  XSIWvOut.cpp  XSIWvOut.h  bRagaNode.cpp  bSineNode.cpp  bSoundReader.cpp  bSynthData.cpp  bSynthData.h  bSynthInstruments.cpp  bSynthInstruments.h  bSynthNode.cpp  bSynthNode.sln  bSynthNode.vcproj  bSynthNode.vcxproj  bSynthNode.vcxproj.filters
Application/Plugins/SynthNode/Backup/: bSynthNode.sln
Application/Plugins/Triangulate/: CMakeLists.txt  GNUmakefile  Triangulate.sln  Triangulate.vcxproj  UpgradeLog.htm  paulslib.c  paulslib.h  plugin.cpp  plugin.h  predicates.h  triangulate.cpp  triangulate.h
Application/Plugins/UsdExport/: Face.usda  Face_Rig.usda  L_Hold.usda  L_Shield.usda  Monkey_Mesh.usda  Monkey_Mesh1.usda  Monkey_Mesh2.usda  R_Hold.usda  R_Shield.usda  RefTest.usda  Rock_Falcon_face.usda  Test.usda  ToonLine.usda  UsdExport.vcxproj  attribute.cpp  attribute.h  common.h  curve.cpp  curve.h  mesh.cpp  mesh.h  model.cpp  model.h  particles.usda  particles_clip.usda  plugin.cpp  points.cpp  prim.cpp  prim.h  scene.cpp  scene.h  test_clip.usda  texture.py  texture.usda  utils.cpp  utils.h  xform.cpp  xform.h
Application/Plugins/UsdICE/: CMakeLists.txt  attribute.cpp  attribute.h  callback.cpp  callback.h  common.h  data.cpp  data.h  engine.cpp  engine.h  event.cpp  event.h  icons.h  nodes.cpp  nodes.h  plugin.cpp  prim.cpp  prim.h  scene.cpp  scene.h  shader.cpp  stage.cpp  stage.h  topology.cpp  topology.h  utils.cpp  utils.h  vertexBuffer.cpp  xform.cpp  xform.h
Application/Plugins/UsdRead/: CMakeLists.txt  callback.cpp  callback.h  common.h  create_usd_prim.py  engine.cpp  engine.h  event.cpp  event.h  explorer.cpp  explorer.h  icons.h  mesh.cpp  mesh.h  plugin.cpp  prim.cpp  prim.h  property.cpp  scene.cpp  scene.h  shader.cpp  shader.h  stage.cpp  stage.h  utils.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  window.cpp  window.h  xform.cpp  xform.h
Application/Plugins/UsdWrite/: CMakeLists.txt  attribute.cpp  attribute.h  camera.cpp  camera.h  common.h  curve.cpp  curve.h  filesystem.cpp  filesystem.h  instancer.cpp  instancer.h  mesh.cpp  mesh.h  model.cpp  model.h  plugin.cpp  points.cpp  points.h  prim.cpp  prim.h  scene.cpp  scene.h  skeleton.cpp  skeleton.h  string.h  subset.cpp  subset.h  ui.cpp  utils.cpp  utils.h  xform.cpp  xform.h
Application/Plugins/Utils/: WeightMapEditor.py
Application/Plugins/Voronoi/: ApplyVoronoi.cpp  CMakeLists.txt  CVoronoi.cpp  GNUmakefile  HEMesh.cpp  HEMesh.h  HEMeshBackup.cpp  IMVoronoi.cpp  IMVoronoi.h  Voronoi.cpp  Voronoi.h  Voronoi.sln  Voronoi.vcxproj  bVoronoi.ilk
Docs/: home.html  (+1 more)
(+888 files in other folders)
